k8s-deployment/middleware1.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin
  namespace: food-order
spec:
  stripPrefix:
    prefixes:
      - /admin
