k8s-deployment/middleware2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: food-order
spec:
  stripPrefix:
    prefixes:
      - /api/admin/
      - /api/customer/
