k8s-deployment/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-order-admin-ingress
  namespace: food-order
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: food-order-strip-admin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mydomain1234.shop
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-ui
            port:
              number: 80
