k8s-deployment/ingress-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-order-apis
  namespace: food-order
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: food-order-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mydomain1234.shop
    http:
      paths:
      - path: /api/admin/
        pathType: Prefix
        backend:
          service:
            name: admin-backend
            port:
              number: 5000
      - path: /api/customer/
        pathType: Prefix
        backend:
          service:
            name: customer-backend
            port:
              number: 5000
