k8s-deployment/ingress-customer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-order-customer-ingress
  namespace: food-order
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: mydomain1234.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-ui
            port:
              number: 80
