k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-order-ingress
  namespace: food-order
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: |
      food-order-strip-admin@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: <Domain HERE>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-ui
            port:
              number: 80
      - path: /customer-api
        pathType: Prefix
        backend:
          service:
            name: customer-backend
            port:
              number: 5000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-ui
            port:
              number: 80
      - path: /admin/api
        pathType: Prefix
        backend:
          service:
            name: admin-backend
            port:
              number: 5000
